<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
  <modelVersion>4.0.0</modelVersion>
  <parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.6.RELEASE</version>
	</parent>
  <groupId>ru.vlapin.experiments</groupId>
  <artifactId>spring-data-jpa-demo2</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
		<java.version>14</java.version>
		
    <!--region BOMs-->
    <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
    <!--endregion-->
	
    <!--region Plugins-->
    <maven.compiler.executable>true</maven.compiler.executable>
    <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
    <spotbugs-maven-plugin.version>4.0.0</spotbugs-maven-plugin.version>
    <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
    <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
    <checkstyle.version>8.29</checkstyle.version>
    <sonar-maven-plugin.version>2.7.1</sonar-maven-plugin.version>
    <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
    <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
    <!--endregion-->
  <minimal.maven.version>3.6.1</minimal.maven.version><maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version><checker.version>3.2.0</checker.version><annotations.version>19.0.0</annotations.version><jcip-annotations.version>1.0</jcip-annotations.version><spotbugs.version>4.0.1</spotbugs.version><error_prone_annotations.version>2.3.4</error_prone_annotations.version><lombok-maven-plugin.version>1.18.12.0</lombok-maven-plugin.version><!--region Libs--><vavr.version>0.10.2</vavr.version>
    <testcontainers.version>1.13.0</testcontainers.version>
    <!--endregion--><versions-maven-plugin.version>2.7</versions-maven-plugin.version><springfox-swagger.version>3.0.0-SNAPSHOT</springfox-swagger.version><springfox-swagger-ui-rfc6570.version>1.0.0</springfox-swagger-ui-rfc6570.version></properties>
  <repositories>
    <repository>
      <id>jcenter-snapshots</id>
      <name>jcenter</name>
      <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
    </repository>
  </repositories>
  <dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		<!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne)--><dependency><groupId>org.checkerframework</groupId><artifactId>checker</artifactId><version>${checker.version}</version><scope>provided</scope></dependency><dependency><groupId>org.jetbrains</groupId><artifactId>annotations</artifactId><version>${annotations.version}</version><scope>provided</scope></dependency><dependency><groupId>net.jcip</groupId><artifactId>jcip-annotations</artifactId><version>${jcip-annotations.version}</version><optional>true</optional></dependency><dependency><groupId>com.github.spotbugs</groupId><artifactId>spotbugs-annotations</artifactId><version>${spotbugs.version}</version><optional>true</optional></dependency><dependency><groupId>com.google.errorprone</groupId><artifactId>error_prone_annotations</artifactId><version>${error_prone_annotations.version}</version><scope>provided</scope></dependency><!--endregion-->  <dependency>
        <groupId>io.vavr</groupId>
        <artifactId>vavr</artifactId>
        <version>${vavr.version}</version>
      </dependency>
    <dependency><groupId>org.testcontainers</groupId><artifactId>junit-jupiter</artifactId><version>${testcontainers.version}</version><scope>test</scope></dependency><!--region Swagger--><dependency><groupId>io.springfox</groupId><artifactId>springfox-swagger2</artifactId><version>${springfox-swagger.version}</version></dependency><dependency><groupId>io.springfox.ui</groupId><artifactId>springfox-swagger-ui-rfc6570</artifactId><version>${springfox-swagger-ui-rfc6570.version}</version></dependency><dependency><groupId>io.springfox</groupId><artifactId>springfox-data-rest</artifactId><version>${springfox-swagger.version}</version></dependency><dependency><groupId>io.springfox</groupId><artifactId>springfox-bean-validators</artifactId><version>${springfox-swagger.version}</version></dependency><!--endregion--></dependencies>
	</dependencyManagement>
  <dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		
      <scope>provided</scope>
    </dependency>
		<!--region Spring Boot test dependencies--><dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency><dependency><groupId>org.testcontainers</groupId><artifactId>junit-jupiter</artifactId></dependency><!--endregion-->
	<!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne)--><dependency><groupId>org.checkerframework</groupId><artifactId>checker</artifactId></dependency><dependency><groupId>org.jetbrains</groupId><artifactId>annotations</artifactId></dependency><dependency><groupId>net.jcip</groupId><artifactId>jcip-annotations</artifactId></dependency><dependency><groupId>com.github.spotbugs</groupId><artifactId>spotbugs-annotations</artifactId></dependency><dependency><groupId>com.google.errorprone</groupId><artifactId>error_prone_annotations</artifactId></dependency><!--endregion-->  <dependency>
      <groupId>io.vavr</groupId>
      <artifactId>vavr</artifactId>
      </dependency><!--region Swagger--><dependency><groupId>io.springfox</groupId><artifactId>springfox-swagger2</artifactId></dependency><dependency><groupId>io.springfox.ui</groupId><artifactId>springfox-swagger-ui-rfc6570</artifactId></dependency><dependency><groupId>io.springfox</groupId><artifactId>springfox-data-rest</artifactId></dependency><dependency><groupId>io.springfox</groupId><artifactId>springfox-bean-validators</artifactId></dependency><!--endregion--></dependencies>
  <build>
    <defaultGoal>spring-boot:run</defaultGoal>
    
		<pluginManagement>
      <plugins>
        <plugin><artifactId>maven-compiler-plugin</artifactId><version>${maven-compiler-plugin.version}</version><configuration><compilerArgs><!--<arg>-Xplugin:Manifold</arg>--></compilerArgs><annotationProcessorPaths><!--<processorPath>--><!--<groupId>systems.manifold</groupId>--><!--<artifactId>manifold-all</artifactId>--><!--<version>${manifold-version}</version>--><!--</processorPath>--><processorPath><groupId>org.projectlombok</groupId><artifactId>lombok</artifactId><version>${lombok.version}</version></processorPath></annotationProcessorPaths><annotationProcessors><annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor><annotationProcessor>lombok.launch.AnnotationProcessorHider$ClaimingProcessor</annotationProcessor></annotationProcessors></configuration></plugin>
        <plugin><groupId>org.jacoco</groupId><artifactId>jacoco-maven-plugin</artifactId><version>${jacoco-maven-plugin.version}</version><executions><execution><id>jacoco-initialize</id><goals><goal>prepare-agent</goal></goals><configuration><propertyName>surefireArgLine</propertyName></configuration></execution><execution><id>post-unit-test</id><phase>test</phase><goals><goal>report</goal></goals></execution><execution><id>pre-integration-test</id><phase>pre-integration-test</phase><goals><goal>prepare-agent</goal></goals><configuration><propertyName>failsafeArgLine</propertyName></configuration></execution><execution><id>post-integration-test</id><phase>post-integration-test</phase><goals><goal>report</goal></goals></execution></executions></plugin>
        <plugin><artifactId>maven-surefire-plugin</artifactId><version>${maven-surefire-plugin.version}</version><configuration><includes><include>**/Test*.java</include><include>**/*Test.java</include><include>**/*Tests.java</include><include>**/*TestCase.java</include></includes><properties><!--<includeTags>fast</includeTags>--><excludeTags>slow</excludeTags><!--<configurationParameters>--><!--junit.jupiter.conditions.deactivate = *--><!--</configurationParameters>--></properties></configuration></plugin>
        <plugin><groupId>com.github.spotbugs</groupId><artifactId>spotbugs-maven-plugin</artifactId><version>${spotbugs-maven-plugin.version}</version><configuration><effort>Max</effort><threshold>Low</threshold><xmlOutput>true</xmlOutput></configuration></plugin>
        <plugin><artifactId>maven-pmd-plugin</artifactId><version>${maven-pmd-plugin.version}</version><configuration><failOnViolation>true</failOnViolation><printFailingErrors>true</printFailingErrors></configuration><executions><execution><goals><goal>check</goal></goals></execution></executions></plugin>
        <plugin><artifactId>maven-checkstyle-plugin</artifactId><version>${maven-checkstyle-plugin.version}</version><configuration><configLocation>google_checks.xml</configLocation></configuration><executions><execution><goals><goal>check</goal></goals></execution></executions><dependencies><dependency><groupId>com.puppycrawl.tools</groupId><artifactId>checkstyle</artifactId><version>${checkstyle.version}</version></dependency></dependencies></plugin>
        <plugin><groupId>org.codehaus.mojo</groupId><artifactId>sonar-maven-plugin</artifactId><version>${sonar-maven-plugin.version}</version></plugin>
        <plugin><groupId>com.spotify</groupId><artifactId>dockerfile-maven-plugin</artifactId><version>${dockerfile-maven-plugin.version}</version><configuration><repository>${project.name}</repository><tag>${project.version}</tag><buildArgs><JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE></buildArgs></configuration><dependencies><dependency><groupId>javax.activation</groupId><artifactId>javax.activation-api</artifactId><version>1.2.0</version></dependency><dependency><groupId>org.codehaus.plexus</groupId><artifactId>plexus-archiver</artifactId><version>3.6.0</version></dependency></dependencies></plugin>
      <plugin><artifactId>maven-enforcer-plugin</artifactId><version>${maven-enforcer-plugin.version}</version><executions><execution><id>enforce-maven</id><goals><goal>enforce</goal></goals><configuration><rules><requireMavenVersion><version>${minimal.maven.version}</version></requireMavenVersion></rules></configuration></execution></executions></plugin><plugin><groupId>org.projectlombok</groupId><artifactId>lombok-maven-plugin</artifactId><version>${lombok-maven-plugin.version}</version></plugin><plugin><groupId>org.codehaus.mojo</groupId><artifactId>versions-maven-plugin</artifactId><version>${versions-maven-plugin.version}</version><configuration><generateBackupPoms>false</generateBackupPoms><rulesUri>file://${project.basedir}/ruleset.xml</rulesUri></configuration></plugin></plugins>
    </pluginManagement>
    
    <plugins>
      
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			
        <configuration>
          <executable>true</executable>
          <jvmArguments>--enable-preview</jvmArguments>
        </configuration>
      </plugin>
		
      <plugin><groupId>org.codehaus.mojo</groupId><artifactId>versions-maven-plugin</artifactId></plugin>
      <plugin><groupId>com.github.spotbugs</groupId><artifactId>spotbugs-maven-plugin</artifactId></plugin>
      <plugin><artifactId>maven-pmd-plugin</artifactId></plugin>
      <plugin><artifactId>maven-checkstyle-plugin</artifactId></plugin>
      <plugin><groupId>org.jacoco</groupId><artifactId>jacoco-maven-plugin</artifactId></plugin>
      <plugin><groupId>org.codehaus.mojo</groupId><artifactId>sonar-maven-plugin</artifactId></plugin>
      <plugin><groupId>com.spotify</groupId><artifactId>dockerfile-maven-plugin</artifactId></plugin>
    <plugin><artifactId>maven-enforcer-plugin</artifactId></plugin><plugin><groupId>org.projectlombok</groupId><artifactId>lombok-maven-plugin</artifactId></plugin></plugins>
	</build>
</project>
